# YIice-cwj-CommunityElectionSystem

./: CMakeLists.txt  DEVELOPMENT.md  README.md
docs/: implementation_plan.md
docs/admin/: INTERFACE.md  README.md
docs/auth/: INTERFACE.md  README.md
docs/cache/: INTERFACE.md  README.md
docs/config/: INTERFACE.md  README.md
docs/db/: INTERFACE.md  README.md
docs/election/: INTERFACE.md  README.md
docs/exception/: INTERFACE.md  README.md
docs/i18n/: INTERFACE.md  README.md
docs/monitor/: INTERFACE.md  README.md
docs/network/: INTERFACE.md  README.md
docs/network/report/: INTERFACE.md  README.md
docs/scheduler/: INTERFACE.md  README.md
docs/security/: INTERFACE.md  README.md
docs/vote/: INTERFACE.md  README.md
include/db/: interface_OR_mapper.h  interface_connection_pool.h  interface_database_connection.h  interface_query_result.h  mysql_connection.h  query_result.h
include/exception/: base_exception.h  database_error_code.h  database_exception.h  error_code.h
src/db/: mysql.connection.cc  query_result.cc
src/exception/: base_exception.cc  database_exception.cc
tests/: CMakeLists.txt
tests/exception/: CMakeLists.txt  database_exception_test.cc
